--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -318,14 +318,17 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="51O-mK-ARz">
                                                     <rect key="frame" x="7" y="11" width="363" height="250"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Digital logic" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="60w-dv-Lsv">
-                                                            <rect key="frame" x="8" y="8" width="346" height="32"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Digital logic" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="60w-dv-Lsv">
+                                                            <rect key="frame" x="8" y="2" width="346" height="45"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="wH4-DS-fAc"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="21"/>
                                                             <color key="textColor" red="0.41481143240000001" green="0.123166047" blue="0.62114572530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By: Ozgur Sinanulu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Gz-yi-bAg">
-                                                            <rect key="frame" x="8" y="36" width="105" height="17"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="748" text="By: Ozgur Sinanulu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Gz-yi-bAg">
+                                                            <rect key="frame" x="8" y="51" width="105" height="10"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                                             <color key="textColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -377,7 +380,7 @@
                                                                     <rect key="frame" x="226" y="15" width="124" height="124"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhb-sR-Phc">
-                                                                            <rect key="frame" x="28" y="52" width="68" height="20"/>
+                                                                            <rect key="frame" x="28" y="52.5" width="68" height="19.5"/>
                                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                                             <color key="textColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -409,7 +412,7 @@
                                                             </constraints>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There are no reviews yet for this course, let's change that together by leaving a review..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W52-3n-zdD">
-                                                            <rect key="frame" x="25" y="48" width="313" height="151"/>
+                                                            <rect key="frame" x="25" y="138.5" width="313" height="60.5"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -444,11 +447,10 @@
                                                         <constraint firstItem="W52-3n-zdD" firstAttribute="leading" secondItem="51O-mK-ARz" secondAttribute="leading" constant="25" id="Nwt-0Y-q8K"/>
                                                         <constraint firstItem="eWQ-2d-Pkz" firstAttribute="centerX" secondItem="51O-mK-ARz" secondAttribute="centerX" id="QP1-yT-GKT"/>
                                                         <constraint firstAttribute="trailing" secondItem="RpU-AS-B3n" secondAttribute="trailing" id="TR2-S9-cf4"/>
-                                                        <constraint firstItem="W52-3n-zdD" firstAttribute="top" secondItem="60w-dv-Lsv" secondAttribute="bottom" constant="8" id="a8i-qG-T3C"/>
-                                                        <constraint firstItem="RpU-AS-B3n" firstAttribute="top" secondItem="1Gz-yi-bAg" secondAttribute="bottom" constant="7.5" id="cbU-qQ-jHo"/>
-                                                        <constraint firstItem="1Gz-yi-bAg" firstAttribute="top" secondItem="60w-dv-Lsv" secondAttribute="bottom" constant="-4" id="eUy-vX-Cck"/>
+                                                        <constraint firstItem="RpU-AS-B3n" firstAttribute="top" secondItem="1Gz-yi-bAg" secondAttribute="bottom" id="cbU-qQ-jHo"/>
+                                                        <constraint firstItem="1Gz-yi-bAg" firstAttribute="top" secondItem="60w-dv-Lsv" secondAttribute="bottom" constant="4" id="eUy-vX-Cck"/>
                                                         <constraint firstAttribute="bottom" secondItem="eWQ-2d-Pkz" secondAttribute="bottom" constant="8" id="me4-f7-hX9"/>
-                                                        <constraint firstItem="60w-dv-Lsv" firstAttribute="top" secondItem="51O-mK-ARz" secondAttribute="top" constant="8" id="nYj-tR-YLx"/>
+                                                        <constraint firstItem="60w-dv-Lsv" firstAttribute="top" secondItem="51O-mK-ARz" secondAttribute="top" constant="2" id="nYj-tR-YLx"/>
                                                         <constraint firstItem="1Gz-yi-bAg" firstAttribute="leading" secondItem="60w-dv-Lsv" secondAttribute="leading" id="oD2-RV-5lc"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
@@ -1832,7 +1834,7 @@
                                                             <constraint firstAttribute="width" constant="50" id="zXh-eF-yDl"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-I9-ABd">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-I9-ABd">
                                                         <rect key="frame" x="0.0" y="50" width="50" height="60"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="60" id="clo-Dr-gAC"/>
@@ -1856,7 +1858,7 @@
                                                             <constraint firstAttribute="height" constant="50" id="Edt-Fy-dg8"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hR-mg-rjs">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7hR-mg-rjs">
                                                         <rect key="frame" x="21" y="50" width="50" height="60"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
@@ -1877,7 +1879,7 @@
                                                             <constraint firstAttribute="width" constant="50" id="P8s-cw-CAe"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UrP-g5-fZD">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="UrP-g5-fZD">
                                                         <rect key="frame" x="41.5" y="50" width="50" height="60"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
@@ -1947,7 +1949,7 @@
         <image name="thumbsup" width="98" height="110"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="u5a-02-P1i"/>
         <segue reference="kxB-Z2-zMZ"/>
-        <segue reference="wIi-Ka-IH6"/>
     </inferredMetricsTieBreakers>
 </document>
